# multichain-governance-iot-traceability

./: .gitignore  INSTALL.md  LICENSE  Makefile  README.md
analysis/: generate_paper_tables.py
ethereum-contract/: README.md
ethereum-contract/src/: SupplyChainAnchoring.sol
ethereum-contract/test/: PartitionRecovery.t.sol  SupplyChainAnchoring.t.sol
formal-model/: README.md  governed_multichain.q  governed_multichain.xml  model_check.py
results/: connectivity_measured.csv  ipfs_measured.txt  partition_gas_measured.csv  substrate_weights.csv
runtime/: Cargo.toml  weights.rs
runtime/src/: lib.rs
simulation/: ipfs_measure.py  plot_connectivity_validation.py  plot_partition_validation.py  robustness_simulation.py
substrate-pallet/: Cargo.toml  benchmarking.rs  connectivity.rs  lib.rs  mock.rs
workload-generator/: generate_scenario.py
