[package]
name = "traceability-runtime"
version = "0.1.0"
edition = "2021"
authors = ["Ramy El Gharbawy"]
description = "Minimal runtime wrapping pallet-supply-chain-traceability for frame-omni-bencher weight measurement"
license = "Apache-2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }

frame-support = { version = "39.0.0", default-features = false }
frame-system = { version = "39.0.0", default-features = false }
frame-benchmarking = { version = "39.0.0", default-features = false, optional = true }

sp-api = { version = "35.0.0", default-features = false }
sp-core = { version = "35.0.0", default-features = false }
sp-genesis-builder = { version = "0.16.0", default-features = false }
sp-runtime = { version = "40.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-version = { version = "38.0.0", default-features = false }

pallet-supply-chain-traceability = { path = "../substrate-pallet", default-features = false }

[build-dependencies]
substrate-wasm-builder = { version = "25.0.0", optional = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking?/std",
    "sp-api/std",
    "sp-core/std",
    "sp-genesis-builder/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-version/std",
    "pallet-supply-chain-traceability/std",
    "dep:substrate-wasm-builder",
]
runtime-benchmarks = [
    "dep:frame-benchmarking",
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "pallet-supply-chain-traceability/runtime-benchmarks",
]
