[package]
name = "pallet-supply-chain-traceability"
version = "0.1.0"
edition = "2021"
authors = ["Ramy El Gharbawy"]
description = "Chapter 1 governance-enforced multichain supply-chain traceability pallet"
license = "Apache-2.0"

[lib]
path = "lib.rs"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }

frame-support = { version = "39.0.0", default-features = false }
frame-system = { version = "39.0.0", default-features = false }
frame-benchmarking = { version = "39.0.0", default-features = false, optional = true }
sp-core = { version = "35.0.0", default-features = false }
sp-runtime = { version = "40.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-io = { version = "39.0.0", default-features = false }

[dev-dependencies]
sp-keystore = { version = "0.41.0" }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking?/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-io/std",
]
runtime-benchmarks = [
    "dep:frame-benchmarking",
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
